# s-demo

./: CMakeLists.txt  Counter.cpp  Counter.hpp  counter.i
cmake-ispc-demo/: CMakeLists.txt  main.cpp  simple.ispc
cmake-swig-demo/: Counter.hpp  counter.i
cmake-swig-demo/java/com/example/counter/: Main.java
java/: Main.java
java/com/example/counter/: NativeLibLoader.java
